<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>attach</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gcat@todo.todo">gcat</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <!-- gcat add+ -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>moveit_ros_planning</build_depend>  
  <build_depend>moveit_ros_move_group</build_depend>   
  <build_depend>moveit_ros_planning_interface</build_depend> 
  <build_depend>graph_msgs</build_depend> 
  <build_depend>geometric_shapes</build_depend> 
  <build_depend> moveit_visual_tools</build_depend> 
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometric_shapes</exec_depend>
  <!-- gcat add; -->    
  
</package>
